@@ -1,0 +1,10 @@
+Title: Fixed broken inventory history view in current master
+Level: 1
+Component: inv
+Compatible: compat
+Version: 1.4.0i3
+Date: 1479120067
+Class: fix
+
+An exception "TypeError: 'NoneType' object is not callable" could happend while
+rendering a inventory history page.
